@@ -1,3 +1,9 @@
+2009-06-02  Reinhard Max  <max@suse.de>
+
+	* tkchat.tcl (::tkchat::Progress): Improved progress bar handling.
+	This hopefully fixes the occasional spinning of the progress bar
+	when the associated action has long finished.
+
 2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Fixed string/list confusion in the message parsing
